activity02.ipynb - pandas

--- a/activity01.ipynb
+++ b/activity01.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "raw",
    "source": [
     "## Activity 01: Use NumPy to compute the Mean, Median, and Variance"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
